[package]
name = "react-run"
version = "0.2.0"
description = "Run React code snippets/components from your command-line without config"
license = "MIT"
homepage = "https://github.com/UltiRequiem/react-run"
repository = "https://github.com/UltiRequiem/react-run"
edition = "2021"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
minreq = { version = "2.5.1", features = ["https"] }
colored = "2"
swc_common = "0.17.2"
swc_ecma_parser = "0.87.1"
open = "2.0.2"
url = "2"
