[package]
name = "react-run"
version = "0.2.0"
description = "Run React code snippets/components from your command-line without config"
license = "MIT"
homepage = "https://github.com/UltiRequiem/react-run"
repository = "https://github.com/UltiRequiem/react-run"
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tungstenite = "0.16.0"
clap = { version = "3.0.10", features = ["derive"] }
minreq = { version = "2.5.1", features = ["https"] }
colored = "2"
open = "2.0.2"
url = "2"
