[package]
name = "react-run"
version = "0.3.0"
description = "Run React code snippets/components from your command-line without config"
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/UltiRequiem/react-run"
repository = "https://github.com/UltiRequiem/react-run"
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
clap = { version = "3.0.10", features = ["derive"] }
minreq = { version = "2.5.1", features = ["https"] }
colored = "2"
open = "2.0.2"
url = "2"
swc_common = { version = "0.17.2", features = ["tty-emitter"] }
swc_ecma_parser = "0.87.1"
swc = "0.116.23"
